# packed_spatial_index

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  FORMAT.md  README.md  RELEASING-AGENT.md  RELEASING.md  SAFETY.md  release-plz.toml
.github/workflows/: ci.yml  geo-publish.yml  geo-release.yml  geo-tag.yml  pages.yml  prepare-release.yml  publish.yml  release-plz.yml  release.yml  tag-first-release.yml  tag.yml
benches/: coord_precision.rs  flatgeobuf2d_bench.rs  flatgeobuf_bench.rs  hilbert2d_bench.rs  hilbert_bench.rs  index2d_bench.rs  index3d_bench.rs  index_bench.rs  persistence_knn2d_bench.rs  persistence_knn3d_bench.rs  persistence_knn_bench.rs  raycast3d_bench.rs  raytriangle3d_bench.rs  sortkey2d_bench.rs
benches/support/: pin.rs
benches/tools/: Cargo.toml  README.md
benches/tools/src/: encode_2d.rs  lib.rs  node_size_2d.rs  node_size_3d.rs  parallel_2d.rs  parallel_3d.rs  radix_2d.rs  soa_2d.rs  soa_3d.rs  sort_2d.rs  sortkey_quality_2d.rs
dev/: core-query-naming.md
docs/: bounds3d-research.md  guide.md  knn.md  left-pack.md  performance.md  persistence.md  simd.md  when-to-use.md
docs/internals/: README.md  knn.md  prefetch.md  simd.md
examples/: basic.rs  basic_2d.rs  basic_3d.rs  encode_experiment.rs  f32_exact_2d.rs  knn.rs  knn_2d.rs  knn_3d.rs  nodesize_experiment.rs  nodesize_experiment_2d.rs  nodesize_experiment_3d.rs  parallel_experiment.rs  parallel_experiment_2d.rs  parallel_experiment_3d.rs  persistence.rs  persistence_2d.rs  persistence_3d.rs  radix_experiment.rs  radix_experiment_2d.rs  raycast_mesh.rs  reuse_workspace.rs  reuse_workspace_2d.rs  reuse_workspace_3d.rs  soa_experiment.rs  soa_experiment_2d.rs  soa_experiment_3d.rs  sort_experiment.rs  sort_experiment_2d.rs  sortkey_quality.rs  sortkey_quality_2d.rs  stream_query.rs
geo/: CHANGELOG.md  Cargo.toml  README.md
geo/docs/: guide.md  memory-model.md  when-to-use.md
geo/examples/: build_index.rs  convert.rs  convert_and_query.rs  discover.rs  embedded_in_parquet.rs  end_to_end_box_vs_polygon.rs  feature_json_payload.rs  r2_polygon_pruning.rs
geo/scripts/: verify_embedded_parquet.py
geo/src/: artifact.rs  build.rs  convert.rs  dataset.rs  discovery.rs  error.rs  feature_read.rs  fgb.rs  filter.rs  geoarrow.rs  geodetic.rs  geojson.rs  lib.rs  manifest.rs  payload.rs  query.rs  read.rs  scan.rs  scan_core.rs  types.rs  validation.rs  wkb.rs
geo/tests/: count_entries.rs  cross_format_sources.rs  external_corpus.rs  feature_level.rs  fgb_source.rs  geojson_source.rs  geoparquet.rs  match_headers.rs  native_parquet.rs  session_api.rs  validation_api.rs
geo/tests/fixtures/geoparquet-compat/: README.md
geo/tests/fixtures/parquet-geospatial/: README.md
server/: Cargo.toml  README.md
server/src/: catalog.rs  collection.rs  error.rs  http.rs  lib.rs  main.rs  query.rs
server/tests/: cli_smoke.rs  server_api.rs
src/: build.rs  builder.rs  builder2d.rs  builder3d.rs  config.rs  f32_storage.rs  frustum.rs  geometry.rs  hilbert.rs  hilbert2d.rs  index.rs  index2d.rs  index2d_f32.rs  index2d_soa.rs  index3d.rs  index3d_f32.rs  index3d_soa.rs  index_soa.rs  join.rs  leftpack.rs  lib.rs  neighbors.rs  overlaps_tests.rs  persistence.rs  polygon.rs  range.rs  ray.rs  raycast.rs  sort.rs  sort2d.rs  sort3d.rs  stream.rs  traversal.rs  tree.rs  tree_access.rs  triangle.rs  types.rs
src/f32_storage/: boxes.rs  columns.rs  mod.rs  stack.rs  writer.rs
src/index2d/: raycast.rs  region.rs  serializer.rs
src/index2d_f32/: serializer.rs  simd_serialization.rs
src/index2d_soa/: raycast.rs  serialization.rs
src/index3d/: raycast.rs  region.rs  serializer.rs
src/index3d_f32/: serializer.rs  simd_serialization.rs
src/index3d_soa/: raycast.rs  serialization.rs
src/neighbors/: best_first.rs  f32_knn.rs  metric_knn.rs
src/persistence/: container.rs  errors.rs  metadata.rs  mod.rs  payload.rs  payload_chunk.rs  tree_chunk.rs  writer.rs
src/stream/: async_io.rs  core.rs  directory.rs  error.rs  limits.rs  mod.rs  payload.rs  planner.rs  readers.rs  tests.rs
tests/: api_2d.rs  api_3d.rs  api_search.rs  avx2.rs  bounds3d_research.rs  correctness.rs  encoders.rs  encoders_2d.rs  frustum.rs  index2d_f32.rs  index3d_f32.rs  join_2d.rs  join_3d.rs  knn.rs  knn_2d.rs  knn_3d.rs  knn_box_2d.rs  knn_box_3d.rs  metadata.rs  metric_knn.rs  payload.rs  persistence.rs  persistence_2d.rs  persistence_3d.rs  persistence_simd.rs  polygon.rs  proptest_2d.rs  proptest_3d.rs  raycast_2d.rs  raycast_3d.rs  region_view.rs  simd.rs  simd_2d.rs  simd_3d.rs  simd_parallel.rs  simd_view.rs  stream_f32.rs  stream_f32_mesh.rs  triangle.rs
tests/common/: mod.rs
wasm-demo/: README.md  package-lock.json  package.json
wasm-demo/crate/: Cargo.toml
wasm-demo/crate/src/: lib.rs
wasm-demo/geo-seed/: Cargo.toml
wasm-demo/geo-seed/src/: main.rs
wasm-demo/geo-worker/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
wasm-demo/geo-worker/scripts/: smoke-live.mjs
wasm-demo/geo-worker/src/: artifact.ts  index.ts  lib.rs
wasm-demo/geo-worker/tests/: artifact.test.mjs
wasm-demo/r2-sim/: Cargo.toml
wasm-demo/r2-sim/src/: main.rs
wasm-demo/web/: index.html
wasm-demo/web/src/: dataset.ts  dom.ts  main.ts  overlays.ts  psi-format.ts  render-types.ts  rendering.ts  styles.css  wasm-validate.ts  webgl-renderer.ts  webgpu-renderer.ts
wasm-demo/worker/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
wasm-demo/worker/src/: index.ts  lib.rs  wasm.d.ts
