[package]
name = "packed_spatial_index"
version = "0.3.1"
edition = "2024"
rust-version = "1.89"
description = "Packed static spatial index for 2D and 3D AABBs with Hilbert ordering, adaptive parallel builds, and SIMD queries."
license = "Apache-2.0"
repository = "https://github.com/Filyus/packed_spatial_index"
documentation = "https://docs.rs/packed_spatial_index"
readme = "README.md"
keywords = ["spatial", "index", "aabb", "hilbert", "rtree"]
categories = ["algorithms", "data-structures"]
exclude = ["/.github/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }

[dependencies]
rayon = { version = "1", optional = true }
wide = { version = "1.4.0", optional = true }

[features]
# Both features are enabled by default to preserve the previous behavior.
default = ["parallel", "simd"]
# Adaptive parallel index builds through rayon (`Index2DBuilder::parallel`).
parallel = ["dep:rayon"]
# SoA index with SIMD queries (`SimdIndex2D`, AVX2 `wide::f64x4` + AVX-512 intrinsics).
simd = ["dep:wide"]

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
flatgeobuf = { version = "6.0.1", default-features = false }
rand = "0.10.1"
static_aabb2d_index = "2"

# Fair optimized-code measurements: one codegen unit + LTO.
[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1

[[bench]]
name = "hilbert2d_bench"
harness = false

[[bench]]
name = "index2d_bench"
harness = false
required-features = ["parallel", "simd"]

[[bench]]
name = "sortkey2d_bench"
harness = false

[[bench]]
name = "index3d_bench"
harness = false

[[bench]]
name = "persistence_knn2d_bench"
harness = false
required-features = ["simd"]

[[bench]]
name = "persistence_knn3d_bench"
harness = false
required-features = ["simd"]

[[bench]]
name = "flatgeobuf2d_bench"
harness = false
required-features = ["parallel", "simd"]

# Examples that require specific features (skipped when the feature is disabled).
[[example]]
name = "parallel_experiment_2d"
required-features = ["parallel"]

[[example]]
name = "parallel_experiment_3d"
required-features = ["parallel"]

[[example]]
name = "soa_experiment_2d"
required-features = ["simd"]

[[example]]
name = "soa_experiment_3d"
required-features = ["simd"]

[[example]]
name = "nodesize_experiment_2d"
required-features = ["simd"]

[[example]]
name = "nodesize_experiment_3d"
required-features = ["simd"]
