[package]
name = "packed_spatial_index"
version = "0.22.0"
edition = "2024"
rust-version = "1.89"
description = "Packed static spatial index (Hilbert R-tree) for 2D/3D AABBs — SIMD range, kNN, raycast, and spatial-join queries, with zero-copy and streaming serialization."
license = "Apache-2.0"
repository = "https://github.com/Filyus/packed_spatial_index"
documentation = "https://docs.rs/packed_spatial_index"
readme = "README.md"
keywords = ["spatial", "rtree", "aabb", "knn", "bvh"]
categories = ["algorithms", "data-structures", "game-development", "science::geo"]
exclude = ["/.github/", "/benches/tools/", "/wasm-demo/", "/geo/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }

[lints.clippy]
# Every `unsafe {}` block must carry a `// SAFETY:` justification (CI runs clippy
# with `-D warnings`, so this is effectively enforced).
undocumented_unsafe_blocks = "warn"

[dependencies]
rayon = { version = "1", optional = true }
wide = { version = "1.5.0", optional = true }
# `try_join_all` to issue a level's range reads concurrently (async feature only).
futures-util = { version = "0.3", default-features = false, features = ["alloc"], optional = true }

[features]
default = ["parallel", "simd"]
# Adaptive parallel index builds through rayon (`Index2DBuilder::parallel`).
parallel = ["dep:rayon"]
# SoA index with SIMD queries (`SimdIndex2D`, AVX2 `wide::f64x4` + AVX-512 intrinsics).
simd = ["dep:wide"]
# Compact f32-storage indexes. Scalar `Index2DF32` / `Index3DF32` work on their
# own; the `SimdIndex*F32` SIMD frontends additionally require `simd`.
f32-storage = []
# Streaming reader: query a serialized index over a `RangeReader` (local file or
# remote object) without loading the whole file. No extra dependencies.
stream = []
# Async streaming: query over an `AsyncRangeReader` (e.g. HTTP range / object
# storage in a browser or edge worker, where I/O is async). Implies `stream`.
async = ["stream", "dep:futures-util"]
# Hidden support API for crate benchmarks and local performance tools.
bench-internals = []

[dev-dependencies]
bvh = { version = "0.12.0", default-features = false, features = ["std"] }
fast_hilbert = "2.1.0"
criterion = { version = "0.8.2", features = ["html_reports"] }
# Minimal executor to drive async streaming tests (no runtime in the crate).
pollster = "0.4"
flatgeobuf = { version = "6.0.1", default-features = false }
nalgebra = { version = "0.34.2", default-features = false, features = ["std"] }
proptest = "1"
rand = "0.10.1"
static_aabb2d_index = "2"

# Fair optimized-code measurements: one codegen unit + LTO.
[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1

[[bench]]
name = "hilbert2d_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "index2d_bench"
harness = false
required-features = ["parallel", "simd", "bench-internals"]

[[bench]]
name = "sortkey2d_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "index3d_bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "persistence_knn2d_bench"
harness = false
required-features = ["simd", "bench-internals"]

[[bench]]
name = "persistence_knn3d_bench"
harness = false
required-features = ["simd", "bench-internals"]

[[bench]]
name = "flatgeobuf2d_bench"
harness = false
required-features = ["parallel", "simd", "bench-internals"]

[[bench]]
name = "coord_precision"
harness = false
required-features = ["f32-storage", "simd"]

# Closest-hit raycast vs the `bvh` crate (build + ordered traversal).
[[bench]]
name = "raycast3d_bench"
harness = false
required-features = ["simd"]

# Ray-triangle closest hit over a candidate slice: f64 vs compact f32.
[[bench]]
name = "raytriangle3d_bench"
harness = false
required-features = ["simd"]

[[example]]
name = "f32_exact_2d"
required-features = ["f32-storage", "simd"]

[[example]]
name = "stream_query"
required-features = ["stream"]
