[package]
name = "packed_spatial_index_geo"
version = "0.4.0"
edition = "2024"
rust-version = "1.89"
description = "GeoParquet / native Parquet geospatial bridge: build a Hilbert spatial index and streamable PSINDEX from geospatial Parquet files."
license = "Apache-2.0"
repository = "https://github.com/Filyus/packed_spatial_index"
readme = "README.md"
keywords = ["geoparquet", "spatial", "rtree", "geoarrow", "index"]
categories = ["science::geo", "data-structures"]

[dependencies]
# Query/build engine. `stream` + `f32-storage` so the converter can emit compact
# files and tests can load them back over a RangeReader. The heavy geo deps below
# stay OUT of this core — that is the whole point of a separate crate.
packed_spatial_index = { path = "..", version = "0.18.1", features = ["stream", "f32-storage"] }

# GeoParquet metadata (primary geometry column, bbox covering, CRS, encoding).
geoparquet = "0.8"
# `Dimension` enum, to tell 2D from 3D geometry columns.
geoarrow-schema = "0.8"
# Arrow arrays + the synchronous Parquet record-batch reader (must match the
# arrow/parquet major that `geoparquet` builds on).
arrow = "58"
parquet = { version = "58", features = ["geospatial"] }
# WKB envelope fallback when a file has no bbox covering column.
geozero = { version = "0.15", features = ["with-wkb"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
# `Bytes` implements parquet's `ChunkReader`, so tests can feed in-memory
# Parquet fixtures straight into the readers.
bytes = "1"
