[package]
name = "packed_spatial_index_geo"
version = "0.14.0"
edition = "2024"
rust-version = "1.89"
description = "Build streamable PSINDEX spatial indexes from GeoParquet and native Parquet geospatial data."
license = "Apache-2.0"
repository = "https://github.com/Filyus/packed_spatial_index"
readme = "README.md"
keywords = ["geoparquet", "spatial", "rtree", "geoarrow", "index"]
categories = ["science::geo", "data-structures"]

[dependencies]
# Query/build engine. `stream` + `f32-storage` so the converter can emit compact
# files and tests can load them back over a RangeReader. The heavy geo deps below
# stay OUT of this core — that is the whole point of a separate crate.
packed_spatial_index = { path = "..", version = "0.20.0", features = ["stream", "f32-storage"] }

# Arrow arrays + the synchronous Parquet record-batch reader.
arrow = "59"
arrow-json = "59"
arrow-select = "59"
parquet = { version = "59", features = ["geospatial"] }
# WKB envelope fallback when a file has no bbox covering column.
geozero = { version = "0.15", features = ["with-wkb", "with-geojson", "with-geo"] }
# Pure-Rust planar predicates for exact post-filtering of bbox candidates.
geo = { version = "0.33", default-features = false }
geo-types = "0.7"

base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
# `Bytes` implements parquet's `ChunkReader`, so tests can feed in-memory
# Parquet fixtures straight into the readers.
bytes = "1"
