[package]
name = "packed_spatial_index_geo"
version = "0.18.2"
edition = "2024"
rust-version = "1.89"
description = "Build streamable PSINDEX spatial indexes from GeoParquet, FlatGeobuf, GeoJSON, and native Parquet geospatial data."
license = "Apache-2.0"
repository = "https://github.com/Filyus/packed_spatial_index"
readme = "README.md"
keywords = ["geoparquet", "flatgeobuf", "geojson", "spatial", "index"]
categories = ["science::geo", "data-structures"]
# Dev-only verification scripts (e.g. the pyarrow cross-check) and wrangler's
# local cache (Cloudflare account id) stay out of the published crate.
exclude = ["/scripts/", "/.wrangler/"]

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "gp2psindex"
required-features = ["parquet"]

[features]
default = ["parquet", "flatgeobuf", "geojson"]
# The Parquet source side: read Parquet / GeoParquet files — discovery,
# inspection, validation, feature read-back — and build/convert indexes from
# them. Pulls in arrow + parquet. Without it the crate is query-only: open a
# pre-built PSINDEX artifact and query it (open_geo_index, search_*,
# filter_hits, payload decode) with no arrow or parquet — small enough for
# wasm32.
parquet = ["dep:arrow", "dep:arrow-json", "dep:arrow-select", "dep:parquet", "_source"]
# FlatGeobuf source side: open .fgb files and build/convert indexes from them.
flatgeobuf = ["dep:flatgeobuf", "_source"]
# GeoJSON source side: open GeoJSON documents and build/convert indexes from
# them. Costs no extra dependencies — geozero's GeoJSON support and serde_json
# are already unconditional.
geojson = ["_source"]
async = ["packed_spatial_index/async"]
# Internal umbrella for the shared source-side scan/build/convert core that
# every input format (parquet, and future formats) plugs into. Enabled
# automatically by the format features — do not enable directly.
_source = []

[dependencies]
# Query/build engine. `stream` + `f32-storage` so the converter can emit compact
# files and tests can load them back over a RangeReader. The heavy geo deps below
# stay OUT of this core — that is the whole point of a separate crate.
packed_spatial_index = { path = "..", version = "0.23.0", features = ["stream", "f32-storage"] }

# Arrow arrays + the synchronous Parquet record-batch reader, behind the
# `parquet` feature: the query-only configuration never touches them.
arrow = { version = "59", optional = true }
arrow-json = { version = "59", optional = true }
arrow-select = { version = "59", optional = true }
parquet = { version = "59", features = ["geospatial"], optional = true }
# Geometry conversion glue for GeoJSON/FlatGeobuf payloads and exact filters.
geozero = { version = "0.15", default-features = false, features = ["with-wkb", "with-geojson", "with-geo"] }
# FlatGeobuf reader/writer behind the `flatgeobuf` feature. Default features
# off: they pull an HTTP range client (reqwest/tokio) we don't use.
flatgeobuf = { version = "6", default-features = false, optional = true }
# Pure-Rust planar predicates for exact post-filtering of bbox candidates.
geo = { version = "0.33", default-features = false }
geo-types = "0.7"

base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "2"

[dev-dependencies]
# `Bytes` implements parquet's `ChunkReader`, so tests can feed in-memory
# Parquet fixtures straight into the readers.
bytes = "1"
pollster = "0.4"
