[package]
name = "packed_spatial_index_server"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Local native HTTP server for querying PSINDEX geospatial artifacts."
license = "Apache-2.0"
repository = "https://github.com/Filyus/packed_spatial_index"
readme = "README.md"
keywords = ["psindex", "spatial", "geojson", "server"]
categories = ["science::geo", "web-programming::http-server"]

[[bin]]
name = "psindex-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
packed_spatial_index = { path = "..", version = "0.25.0", default-features = false, features = ["stream"] }
packed_spatial_index_geo = { path = "../geo", version = "0.23.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
packed_spatial_index_geo = { path = "../geo", version = "0.23.0", default-features = false, features = ["geojson"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
